html and css first part done

--- a/index.html
+++ b/index.html
@@ -1,10 +1,215 @@
 <!DOCTYPE html>
-<html>
+<html html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>Prueba</title>
+    <meta charset="utf-8" />
+    <meta name="author" content="Diego Riveros" />
+    <meta name="description" content="La pagina web de Diego Riveros" />
+    <meta name="keywords" content="HTML,CSS,JavaScript" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link href="./css/mystyle.css" rel="stylesheet" />
+
+    <link rel="shortcut icon" href="./images/favicon.ico" />
+
+    <title>Diego Riveros</title>
   </head>
   <body>
-    <h1> Prueba</h1>
+    <!-----navbar --->
+
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <a class="navbar-brand">Diego Riveros</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarText"
+        aria-controls="navbarText"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item ">
+            <a class="nav-link" href="#about-me">Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#research-project">Research Project</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#hobbies">Hobbies</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container">
+      <!---section  id=about-me---->
+      <section id="about-me">
+        <br />
+        <br />
+        <br />
+
+        <div class="row">
+          <div class="col-md-4">
+            <img
+              id="profile-photo"
+              src="./images/mi_foto_perfil.jpeg"
+              class="card-img"
+              alt="My Profile Photo"
+            />
+          </div>
+
+          <div class="col-md-8">
+            <h1>Diego Riveros</h1>
+
+            <br />
+            <br />
+
+            <p>
+              Software Development Engineer with a minor in Psychology,
+              passionate about programming, software development processes,
+              software testing, best practices, software design as well as team
+              dynamics, team building, and teamwork.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!--section contact information--->
+      <section id="research-project">
+        <br />
+        <br />
+        <br />
+
+        <h2>Reasearch Project</h2>
+
+        <p>
+          Investigate the cons and pros of using shapes and images instead of
+          numbers for software development effort estimation. The project is
+          conducted under the advice of professors Mario Linares and Dario
+          Correal for the department of system and computer engineering, and
+          Luis Cardenas for the department of psychology
+        </p>
+
+        <div class="card-deck">
+          <div class="card border-dark mb-3">
+            <img
+              src="./images/mariolinares.jpg"
+              class="card-img-top"
+              alt="Foto Mario Linares"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Mario Linares</h5>
+            </div>
+          </div>
+          <div class="card border-dark mb-3">
+            <img
+              src="./images/dariocorreal.jpg"
+              class="card-img-top"
+              alt="Foto Dario Correal"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Dario Correal</h5>
+            </div>
+          </div>
+          <div class="card border-dark mb-3">
+            <img
+              src="./images/luiscardenas.jpg"
+              class="card-img-top"
+              alt=" Foto Luis Cardenas"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Luis Cardenas</h5>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <br />
+
+      <!--section Hobbies--->
+      <section id="hobbies">
+        <h2>Hobbies</h2>
+
+        <div class="row">
+          <div class="col">
+            <h3>Volunteering</h3>
+            <img
+              src="./images/corazonpeludito.jpg"
+              class="img-fluid"
+              alt="Foto Fundación Corazón Peludito"
+            />
+
+            <br />
+            <br />
+
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque
+              natus, aut architecto autem ea exercitationem, ipsa officia
+              deleniti, ex dicta reiciendis excepturi animi culpa sunt qui.
+              Dolor quaerat maxime libero.
+            </p>
+          </div>
+
+          <div class="col">
+            <h3>Volleyball</h3>
+            <img
+              id="volleyball"
+              src="./images/voleykost.jpg"
+              class="img-fluid"
+              alt="Foto Fundación Corazón Peludito"
+            />
+
+            <br />
+            <br />
+
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit
+              blanditiis accusantium laborum minus laudantium esse placeat,
+              consectetur deleniti temporibus doloremque, consequatur beatae
+              natus officiis atque mollitia porro harum earum molestias.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!--section Contact Me--->
+      <section id="contact-me"></section>
+
+      <br />
+      <div class="alert alert-info" role="alert">
+        Want to watch my cv? click here: <a href="./cv.html">CV</a>
+      </div>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
