--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
     <link rel="shortcut icon" href="./images/favicon.ico" />
 
+    <script src="./js/script.js"></script>
+    <script>
+      updateCardPositions();
+    </script>
+
     <title>Diego Riveros</title>
   </head>
   <body>
@@ -106,32 +111,41 @@
         <div class="card-deck">
           <div class="card border-dark mb-3">
             <img
+              id="cardmariolinaresphoto"
               src="./images/mariolinares.jpg"
               class="card-img-top"
               alt="Foto Mario Linares"
             />
             <div class="card-body">
-              <h5 class="card-title">Mario Linares</h5>
+              <h5 id="cardmariolinarestitle" class="card-title">
+                Mario Linares
+              </h5>
             </div>
           </div>
           <div class="card border-dark mb-3">
             <img
+              id="carddariocorrealphoto"
               src="./images/dariocorreal.jpg"
               class="card-img-top"
               alt="Foto Dario Correal"
             />
             <div class="card-body">
-              <h5 class="card-title">Dario Correal</h5>
+              <h5 id="carddariocorrealtitle" class="card-title">
+                Dario Correal
+              </h5>
             </div>
           </div>
           <div class="card border-dark mb-3">
             <img
+              id="cardluiscardenasphoto"
               src="./images/luiscardenas.jpg"
               class="card-img-top"
               alt=" Foto Luis Cardenas"
             />
             <div class="card-body">
-              <h5 class="card-title">Luis Cardenas</h5>
+              <h5 id="cardluiscardenastitle" class="card-title">
+                Luis Cardenas
+              </h5>
             </div>
           </div>
         </div>
