--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     />
     <link href="./css/mystyle.css" rel="stylesheet" />
 
-    <link rel="shortcut icon" href="./images/favicon.ico" />
-
     <script src="./js/script.js"></script>
     <script>
       updateCardPositions();
     </script>
+
+    <link rel="shortcut icon" href="./images/favicon.ico" />
 
     <title>Diego Riveros</title>
   </head>
@@ -170,10 +170,14 @@
             <br />
 
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque
-              natus, aut architecto autem ea exercitationem, ipsa officia
-              deleniti, ex dicta reiciendis excepturi animi culpa sunt qui.
-              Dolor quaerat maxime libero.
+              Since 2017 I've been taking part in this amazing project. I've
+              participated in several events that had allowed me to meet
+              heartfelt stories of animals that had been rescued and delivered
+              to joyful families, like Atenea, a doggy I met a year ago who is
+              now with me at home. The foundation organizes adoption events each
+              Saturday in pet shops, veterinaries or shopping malls in Bogotá.
+              My duty there is to take care of dogs through the event, giving
+              them a different day as they would have in their shelter.
             </p>
           </div>
 
@@ -190,10 +194,8 @@
             <br />
 
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit
-              blanditiis accusantium laborum minus laudantium esse placeat,
-              consectetur deleniti temporibus doloremque, consequatur beatae
-              natus officiis atque mollitia porro harum earum molestias.
+              It is a sport that I liked a lot since childhood. In 2015 I had
+              the opportunity to participate in the Voleykost club.
             </p>
           </div>
         </div>
