--- a/cv.html
+++ b/cv.html
@@ -78,7 +78,11 @@
       <div class="row">
         <div class="col-md-6">
           <i class="fa fa-whatsapp" style="font-size:36px"></i>
-          <a class="icon" href="https://api.whatsapp.com/send?phone=573175746748&text=Hola!">3175746748</a>
+          <a
+            class="icon"
+            href="https://api.whatsapp.com/send?phone=573175746748&text=Hola!"
+            >3175746748</a
+          >
         </div>
         <div class="col-md-6">
           <i class="fa fa-envelope" style="font-size:36px"></i>
@@ -288,41 +292,113 @@
           <ul>
             <li>
               <p>Java</p>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped progress-bar-animated progress"
+                  role="progressbar"
+                  aria-valuenow="75"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
             </li>
           </ul>
           <ul>
             <li>
               <p>Git</p>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped progress-bar-animated progress"
+                  role="progressbar"
+                  aria-valuenow="75"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
             </li>
           </ul>
           <ul>
             <li>
               <p>GNU/Linux</p>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped progress-bar-animated"
+                  role="progressbar"
+                  aria-valuenow="75"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
             </li>
           </ul>
           <ul>
             <li>
               <p>MongoDB</p>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped progress-bar-animated"
+                  role="progressbar"
+                  aria-valuenow="75"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
             </li>
           </ul>
           <ul>
             <li>
               <p>AWS</p>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped progress-bar-animated"
+                  role="progressbar"
+                  aria-valuenow="75"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
             </li>
           </ul>
           <ul>
             <li>
               <p>Docker</p>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped progress-bar-animated"
+                  role="progressbar"
+                  aria-valuenow="75"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
             </li>
           </ul>
           <ul>
             <li>
               <p>Spring</p>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped progress-bar-animated"
+                  role="progressbar"
+                  aria-valuenow="75"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
             </li>
           </ul>
           <ul>
             <li>
               <p>JUnit</p>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped progress-bar-animated"
+                  role="progressbar"
+                  aria-valuenow="75"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
             </li>
           </ul>
         </div>
