--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <br />
         <br />
 
-        <h2>Reasearch Project</h2>
+        <h2>Research Project</h2>
 
         <p>
           Investigate the cons and pros of using shapes and images instead of
