--- a/cv.html
+++ b/cv.html
@@ -406,7 +406,7 @@
 
       <div class="row">
         <div class="col-md-8">
-          <h4>Reasearch Projects</h4>
+          <h4>Research Projects</h4>
           <hr />
 
           <h5>
