--- a/cv.html
+++ b/cv.html
@@ -223,9 +223,7 @@
             <li>
               <p>
                 Collaborated with two companies, IBM and ProCibernética, in the
-                application development \item[$*$] Worked in the implementation
-                of the Blockchain web and the development of the API related to
-                it
+                application development
               </p>
             </li>
             <li>
