--- a/index.html
+++ b/index.html
@@ -194,8 +194,12 @@
             <br />
 
             <p>
-              It is a sport that I liked a lot since childhood. In 2015 I had
-              the opportunity to participate in the Voleykost club.
+              Since childhood, I got interested in Volleyball, given that my
+              height is an advantage for the game. In 2015 I had the opportunity
+              to participate in the Voleykost club. I've participated in
+              multiple tournaments in Bogotá by playing in the third position (center),
+              which allowed me to spike and block with a high level, but because
+              of the training, I have low skills at receiving.
             </p>
           </div>
         </div>
