--- a/cv.html
+++ b/cv.html
@@ -46,7 +46,7 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item ">
-            <a class="nav-link" href="index.html">Back</a>
+            <a class="nav-link" href="./">Back</a>
           </li>
         </ul>
       </div>
