--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <br />
 
             <p>
-              Software Development Engineer with a minor in Psychology,
+              Student of Software Development Engineer with a minor in Psychology,
               passionate about programming, software development processes,
               software testing, best practices, software design as well as team
               dynamics, team building, and teamwork.
