--- a/cv.html
+++ b/cv.html
@@ -121,7 +121,7 @@
           </ul>
         </div>
         <div class="col-md-4">
-          <h4>ACHIVEMENTS</h4>
+          <h4>ACHIEVEMENTS</h4>
           <hr class="sidebar" />
 
           <h5>
