finish the web page

--- a/cv.html
+++ b/cv.html
@@ -27,7 +27,7 @@
     <title>Diego Riveros</title>
   </head>
   <body>
-    <!-----navbar --->
+    <!-- navbar -->
 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand">Diego Riveros</a>
@@ -108,9 +108,7 @@
           <hr />
 
           <h5>
-            University of Los Andes
-            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-            2013 - Present
+            University of Los Andes &nbsp; 2013 - Present
           </h5>
 
           <ul>
@@ -147,7 +145,7 @@
           <hr />
 
           <h5>
-            Aplicaciones S.A &nbsp August 2019 - September 2019
+            Aplicaciones S.A &nbsp; August 2019 - September 2019
           </h5>
 
           <p>My responsibilities in the company where:</p>
@@ -408,7 +406,7 @@
           <hr />
 
           <h5>
-            Planning Poker Research &nbsp September 2019 - Present
+            Planning Poker Research &nbsp; September 2019 - Present
           </h5>
 
           <p>
