--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html html lang="en">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="author" content="Diego Riveros" />
@@ -28,7 +28,7 @@
     <title>Diego Riveros</title>
   </head>
   <body>
-    <!-----navbar --->
+    <!-- navbar -->
 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand">Diego Riveros</a>
@@ -60,7 +60,7 @@
     </nav>
 
     <div class="container">
-      <!---section  id=about-me---->
+      <!-- section  id=about-me -->
       <section id="about-me">
         <br />
         <br />
@@ -83,16 +83,16 @@
             <br />
 
             <p>
-              Student of Software Development Engineer with a minor in Psychology,
-              passionate about programming, software development processes,
-              software testing, best practices, software design as well as team
-              dynamics, team building, and teamwork.
+              Student of Software Development Engineer with a minor in
+              Psychology, passionate about programming, software development
+              processes, software testing, best practices, software design as
+              well as team dynamics, team building, and teamwork.
             </p>
           </div>
         </div>
       </section>
 
-      <!--section contact information--->
+      <!-- section contact information -->
       <section id="research-project">
         <br />
         <br />
@@ -153,7 +153,7 @@
 
       <br />
 
-      <!--section Hobbies--->
+      <!-- section Hobbies -->
       <section id="hobbies">
         <h2>Hobbies</h2>
 
@@ -197,16 +197,13 @@
               Since childhood, I got interested in Volleyball, given that my
               height is an advantage for the game. In 2015 I had the opportunity
               to participate in the Voleykost club. I've participated in
-              multiple tournaments in Bogotá by playing in the third position (center),
-              which allowed me to spike and block with a high level, but because
-              of the training, I have low skills at receiving.
+              multiple tournaments in Bogotá by playing in the third position
+              (center), which allowed me to spike and block with a high level,
+              but because of the training, I have low skills at receiving.
             </p>
           </div>
         </div>
       </section>
-
-      <!--section Contact Me--->
-      <section id="contact-me"></section>
 
       <br />
       <div class="alert alert-info" role="alert">
