--- a/cv.html
+++ b/cv.html
@@ -86,9 +86,7 @@
         </div>
         <div class="col-md-6">
           <i class="fa fa-envelope" style="font-size:36px"></i>
-          <a class="icon" href="mailto:df.riveros11@uniandes.edu.co"
-            >df.riveros11@uniandes.edu.co</a
-          >
+          <p>df.riveros11[~at~]uniandes.edu.co</p>
         </div>
       </div>
 
