--- a/cv.html
+++ b/cv.html
@@ -77,8 +77,14 @@
 
       <div class="row">
         <div class="col-md-6">
+          <i class="fab fa-twitter" style="font-size:36px"></i>
+          <a class="icon" href="https://twitter.com/DiegoRi85574758"
+            >https://gitlab.com/df.riveros11</a
+          >
+        </div>
+        <div class="col-md-6">
           <i class="fa fa-envelope" style="font-size:36px"></i>
-          <p>df.riveros11[~at~]uniandes.edu.co</p>
+          <a class="icon" >df.riveros11[~at~]uniandes.edu.co</a>
         </div>
       </div>
 
