--- a/cv.html
+++ b/cv.html
@@ -68,7 +68,7 @@
           >
         </div>
         <div class="col-md-6">
-          <i class="fa fa-gitlab" style="font-size:36px"></i>
+          <i class="fa fa-twitter" aria-hidden="true" style="font-size:36px"></i>
           <a class="icon" href="https://gitlab.com/df.riveros11"
             >https://gitlab.com/df.riveros11</a
           >
@@ -78,8 +78,8 @@
       <div class="row">
         <div class="col-md-6">
           <i class="fab fa-twitter" style="font-size:36px"></i>
-          <a class="icon" href="https://twitter.com/DiegoRi85574758"
-            >https://gitlab.com/df.riveros11</a
+          <a class="icon" href="https://twitter.com/Diego_Riveros_L"
+            >Follow @Diego_Riveros_L</a
           >
         </div>
         <div class="col-md-6">
